# cw5

./: README.md  pyproject.toml
cw5/: db_manager.py  main.py  queries.sql  utils.py
