[tool.poetry]
name = "cw5"
version = "0.1.0"
description = ""
authors = ["artemm <artem.m2013@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
